@@ -4,6 +4,7 @@ import compile.MapSpecRegistry;
 import compile.SpecRegistry;
 import schema.spec.ParamSpec;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
@@ -15,13 +16,27 @@ import java.util.Set;
  * Registry of selector kinds. Heads match case-insensitively; a duplicate fails fast at build time.
  * {@link #specRegistry()} exposes each selector's {@link ParamSpec} so the pure compiler can validate
  * inline arguments without depending on {@code se-engine}.
+ *
+ * <p>Each head gets a dense {@code kindId} in registration order (ADR-0039): {@link #idOf} stamps it onto a
+ * {@link compile.model.CompiledSelector} at compile time and {@link #selectorsById()} lets the executor
+ * dispatch by array index with no per-execution head lookup.
  */
 public final class SelectorRegistry {
 
     private final Map<String, SelectorKind> byHead;
+    private final SelectorKind[] byId;
+    private final Map<String, Integer> idByHead;
 
-    private SelectorRegistry(Map<String, SelectorKind> byHead) {
-        this.byHead = Map.copyOf(byHead);
+    // {@code ordered} MUST preserve registration order (a LinkedHashMap) so dense ids match the array positions.
+    private SelectorRegistry(Map<String, SelectorKind> ordered) {
+        this.byHead = Collections.unmodifiableMap(new LinkedHashMap<>(ordered));
+        this.byId = ordered.values().toArray(new SelectorKind[0]);
+        Map<String, Integer> ids = new LinkedHashMap<>();
+        int i = 0;
+        for (String head : ordered.keySet()) {
+            ids.put(head, i++);
+        }
+        this.idByHead = Collections.unmodifiableMap(ids);
     }
 
     public static Builder builder() {
@@ -31,6 +46,17 @@ public final class SelectorRegistry {
     /** Case-insensitive head lookup. */
     public Optional<SelectorKind> lookup(String head) {
         return Optional.ofNullable(byHead.get(head.toUpperCase(Locale.ROOT)));
+    }
+
+    /** The dense kind id of {@code head} (case-insensitive), or {@code -1} if unregistered (ADR-0039). */
+    public int idOf(String head) {
+        Integer id = idByHead.get(head.toUpperCase(Locale.ROOT));
+        return id == null ? -1 : id;
+    }
+
+    /** Selectors indexed by dense id, so the executor dispatches {@code selectorsById()[target.kindId()]} (ADR-0039). */
+    public SelectorKind[] selectorsById() {
+        return byId.clone();
     }
 
     /** Every registered head, in canonical upper-case form. */
